media-server/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:2.14.5
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config-pv
              mountPath: /config
            - name: data-pv
              mountPath: /data
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: data-pv
          persistentVolumeClaim:
            claimName: media-pvc-2
        - name: configmap-volume
          configMap:
            name: lidarr-config
