media-server/lidarr/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: lidarr.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              name: http
  tls:
  - hosts:
    - lidarr.wavecat.net
    secretName: lidarr.wavecat.net
